--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -11,7 +11,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 def getVersionName = { ->
-    return "1.5.69"
+    return "1.5.70"
 }
 
 def getArtifactId = { ->
@@ -59,6 +59,7 @@ publishing {
 
 android {
     compileSdk compile_sdk_version
+    namespace 'com.sceyt.sceytchatuikit'
 
     defaultConfig {
         minSdk min_sdk_version
