--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
     compileSdk compile_sdk_version
+    namespace 'com.sceyt.chat.ui'
 
     defaultConfig {
         applicationId "com.sceyt.chat.ui"
