--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -63,6 +63,7 @@ ext {
     swipe_refresh_layout_version = '1.1.0'
 
     work_version = "2.7.1"
+    wave_seek_bar_version = "5.0.2"
 
     supportDependencies = [
             appCompat           : "androidx.appcompat:appcompat:$app_compat_version",
@@ -104,5 +105,6 @@ ext {
             ssp                 : "com.intuit.ssp:ssp-android:$ssp_version",
             swipeRefreshLayout  : "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version",
             workRuntimeKtx      : "androidx.work:work-runtime-ktx:$work_version",
+            waveSeekBar         : "com.github.massoudss:waveformSeekBar:$wave_seek_bar_version",
     ]
 }
