--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@
 
     <application
         android:name=".SceytUiKitApp"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:allowBackup="false"
         android:supportsRtl="false"
         android:theme="@style/SceytAppTheme">
-        <activity android:name="com.sceyt.sceytchatuikit.presentation.uicomponents.share.SceytShareActivity"
+        <activity
+            android:name="com.sceyt.sceytchatuikit.presentation.uicomponents.share.SceytShareActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
