--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -11,7 +11,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 def getVersionName = { ->
-    return "1.6.2"
+    return "1.6.3"
 }
 
 def getArtifactId = { ->
@@ -105,7 +105,7 @@ dependencies {
     api supportDependencies.liveEvent
     api supportDependencies.glide
     api supportDependencies.glideTransformations
-    implementation supportDependencies.axEmoji
+    implementation supportDependencies.axEmojiGoogleProvider
     api supportDependencies.ion
     api supportDependencies.firebaseBom
     api supportDependencies.firebaseMessaging
