--- a/AXEmojiView/build.gradle
+++ b/AXEmojiView/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion compile_sdk_version
 
     defaultConfig {
-        minSdkVersion min_sdk_version
-        targetSdkVersion target_sdk_version
+        minSdkVersion 21
+        targetSdkVersion 32
 
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    implementation supportDependencies.appCompat
-    implementation supportDependencies.recyclerView
-    implementation supportDependencies.cardView
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
 }
 
