--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,6 @@
 ext {
-    compile_sdk_version = 32
-    target_sdk_version = 32
+    compile_sdk_version = 33
+    target_sdk_version = 33
     min_sdk_version = 21
 
     /** App version */
@@ -8,13 +8,13 @@ ext {
     app_version_name = "1.0.0"
 
     /** Dependency implementation versions*/
-    app_compat_version = '1.5.1'
+    app_compat_version = '1.6.1'
     activity_ktx_version = '1.4.0'
     async_layout_inflater_version = '1.0.0'
     ax_emoji_version = '1.5.2'
 
     card_view_version = '1.0.0'
-    core_ktx_version = '1.8.0'
+    core_ktx_version = '1.9.0'
     constraint_layout_version = '2.1.4'
     coroutines_version = '1.6.0-native-mt'
 
@@ -22,23 +22,23 @@ ext {
 
     datastore_version = '1.0.0'
 
-    exo_player_media_version = '1.0.0-beta02'
-    emoji_bundled_version = '1.2.0'
+    exo_player_media_version = '1.0.0'
+    emoji_bundled_version = '1.3.0-rc01'
 
     jsoup_version = '1.15.4'
-    material_version = '1.9.0-alpha01'
+    material_version = '1.9.0-beta01'
     moshi_converter_version = '2.9.0'
 
-    fragment_ktx_version = '1.5.5'
+    fragment_ktx_version = '1.5.6'
     firebase_core_version = '20.0.2'
-    firebase_messaging_version = '23.1.1'
-    firebase_bom_version = '31.2.2'
+    firebase_messaging_version = '23.1.2'
+    firebase_bom_version = '31.2.3'
     firebase_crashlitics_version = '18.2.6'
     flex_box_version = "3.0.0"
 
     live_event_version = '1.2.0'
 
-    glide_version = '4.15.0'
+    glide_version = '4.15.1'
     glide_compiler_version = '4.12.0'
     gson_version = '2.8.9'
     glide_transformations_version = '4.3.0'
@@ -46,10 +46,10 @@ ext {
     ion_version = "3.1.0"
 
     kotlin_version = '1.6.10'
-    koin_version = '3.3.3'
+    koin_version = '3.4.0'
 
     legacy_version = '1.0.0'
-    lifecycle_version = '2.5.1'
+    lifecycle_version = '2.6.1'
     lottie_version = '6.0.0'
     light_compressor_version = '1.0.1'
 
@@ -57,16 +57,16 @@ ext {
 
     ok_http_version = '5.0.0-alpha.8'
 
-    recycler_view_version = '1.2.1'
+    recycler_view_version = '1.3.0'
     retrofit_version = '2.9.0'
-    room_version = '2.4.3'
+    room_version = '2.5.1'
 
     sceyt_sdk_version = '1.0.9-SNAPSHOT'
     sdp_version = '1.1.0'
     ssp_version = '1.1.0'
     swipe_refresh_layout_version = '1.1.0'
 
-    work_version = "2.7.1"
+    work_version = '2.8.1'
     wave_seek_bar_version = "5.0.2"
 
     supportDependencies = [
