--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -18,7 +18,7 @@ def getArtifactId = { ->
     return "sceytkit"
 }
 
-task sourceJar(type: Jar) {
+tasks.register('sourceJar', Jar) {
     from android.sourceSets.main.java.srcDirs
     classifier "sources"
 }
