--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,18 +18,18 @@ gson = "2.13.1"
 jsoup = "1.21.1"
 junit = "4.13.2"
 junitKtx = "1.3.0"
-koinAndroid = "3.5.0"
+koinAndroid = "3.5.6"
 kotlinxCoroutinesTest = "1.10.2"
-libphonenumber = "9.0.10"
+libphonenumber = "9.0.11"
 lifecycleRuntimeKtx = "2.9.2"
 lottie = "6.6.7"
 material = "1.12.0"
-media3Exoplayer = "1.7.1"
+media3Exoplayer = "1.8.0"
 mockitoCore = "5.18.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "6.0.0"
-okhttp = "5.0.0-alpha.14"
-okio = "3.15.0"
+okhttp = "5.1.0"
+okio = "3.16.0"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
 robolectric = "4.15.1"
@@ -40,11 +40,11 @@ sspAndroid = "1.1.1"
 truth = "1.4.4"
 ucrop = "2.2.10"
 waveformseekbar = "5.0.2"
-workRuntimeKtx = "2.10.2"
+workRuntimeKtx = "2.10.3"
 lifecycleProcess = "2.9.2"
 google-services = "4.4.3"
 firebase-crashlytics = "3.0.5"
-ksp = "2.1.20-2.0.1"
+ksp = "2.2.0-2.0.2"
 
 [libraries]
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
